--- a/views/about.html
+++ b/views/about.html
@@ -24,8 +24,8 @@
                 <span id="ca-yellow">Critique</span><span id="ca-blue">Aid</span>
             </h2>
 
-            <!-- button to email bug reports and or feedback -->
-            <a href="mailto:sshivak2@illinois.edu?Subject=CritiqueAid%20Feedback" target="_blank" id="ca-report-link">
+            <!-- button to submit bug reports and or feedback -->
+            <a href="https://goo.gl/forms/1lPBr7cgMIGsp5K42" target="_blank" id="ca-report-link">
                 <button id="ca-report" type="button">
                     <i class="fa fa-paper-plane-o" aria-hidden="true"></i>
                 </button>
@@ -83,18 +83,6 @@
                             Bad
                         </p>
                     </button>
-                </li>
-
-                <!-- option for adjusting settings -->
-                <li>
-                    <a href="options.html">
-                        <button id="options" type="button">
-                            <i class="fa fa-cog" aria-hidden="true"></i>
-                            <p class="ca-description">
-                                Options
-                            </p>
-                        </button>
-                    </a>
                 </li>
 
                 <!-- option for viewing more info about the extension -->
