--- a/views/about.html
+++ b/views/about.html
@@ -88,7 +88,7 @@
                 <!-- option for viewing more info about the extension -->
                 <li>
                     <a href="about.html">
-                        <button id="about" type="button">
+                        <button id="about" type="button" class="selected">
                             <i class="fa fa-question" aria-hidden="true"></i>
                             <p class="ca-description">
                                 About
