--- a/views/popup.html
+++ b/views/popup.html
@@ -50,6 +50,7 @@
             </div>
 
             <!-- search result's reddit comment and link to original post -->
+            <p id="ca-post-title"></p>
             <p id="ca-text">
                 When you search for keywords like "resume" or "portfolio" in the field above,
                 you will get examples of what a good critique would look like here.
@@ -110,7 +111,7 @@
                 <!-- option for viewing good example -->
                 <li>
                     <a href="popup.html">
-                        <button id="good-example" type="button">
+                        <button id="good-example" type="button" class="selected">
                             <i class="fa fa-check" aria-hidden="true"></i>
                             <p class="ca-description">
                                 Good
